--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -1,9 +1,15 @@
-.blink {
-  animation: blinker 2s linear infinite;
+nav.top {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
 }
 
-@keyframes blinker {
-  50% {
-    opacity: 0;
-  }
+.sidebar {
+  margin-top: 60px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  padding: 0;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
