--- a/app/views/layouts/_flash_message.phtml
+++ b/app/views/layouts/_flash_message.phtml
@@ -3,4 +3,4 @@
         <div><?= $msg ?></div>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-<? endforeach; ?>
+<? endforeach ?>
