--- a/app/views/layouts/application.phtml
+++ b/app/views/layouts/application.phtml
@@ -14,18 +14,37 @@
 </head>
 
 <body>
+    <nav class="navbar fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="<?= route('root') ?>">Problem Track</a>
+        </div>
+    </nav>
+
     <main class="container-fluid">
+        <div class="row">
+            <aside class="col-auto sidebar">
+                <nav>
+                    <ul class="nav flex-column mt-1">
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= route('problems.index') ?>">Problemas</a>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
+            <section id="main-content" class="col">
 
-        <?php require '_flash_message.phtml'; ?>
+                <?php require '_flash_message.phtml'; ?>
 
-        <header class="mb-3">
-            <h1>
-                <?= $title ?>
-            </h1>
-        </header>
+                <header class="mb-3">
+                    <h1>
+                        <?= $title ?>
+                    </h1>
+                </header>
 
-        <?php require $view ?>
+                <?php require $view ?>
 
+            </section>
+        </div>
     </main>
 </body>
 
